--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -13,12 +13,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-
+      - name: Set up Java
+        run: echo "JAVA_HOME=$JAVA_HOME" >> $GITHUB_ENV
+    
+      - name: Maven build
+        run: |
+          sudo mvn clean install
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME }}
+      
       - name: Build and Deploy
         run:  sudo mvn clean install
 
