--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Java
-        run: echo "JAVA_HOME=$JAVA_HOME" >> $GITHUB_ENV
+        run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
     
       - name: Maven build
         run: |
