--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -18,7 +18,7 @@ jobs:
     
       - name: Maven build
         run: |
-          sudo mvn clean install
+          sudo /opt/apache-maven-3.8.4/bin/mvn clean install
         env:
           JAVA_HOME: ${{ env.JAVA_HOME }}
       
