--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -18,7 +18,7 @@ jobs:
     
       - name: Build and Deploy
         run: |
-          mvn clean install
+          /opt/apache-maven-3.9.6/bin/mvn clean install
         env:
           JAVA_HOME: ${{ env.JAVA_HOME }}
       
