--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -23,4 +23,4 @@ jobs:
           JAVA_HOME: ${{ env.JAVA_HOME }}
       
       - name: Complete
-        run: sudo java -jar /opt/actions-runner/_work/spring-hello/spring-hello/target/demo-hello-0.0.1-SNAPSHOT.jar &
+        run: java -jar /opt/actions-runner/_work/spring-hello/spring-hello/target/demo-hello-0.0.1-SNAPSHOT.jar &
