--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -18,9 +18,14 @@ jobs:
     
       - name: Build and Deploy
         run: |
-          /opt/apache-maven-3.9.6/bin/mvn clean install
+          /opt/apache-maven-3.9.6/bin/mvn clean install package
         env:
           JAVA_HOME: ${{ env.JAVA_HOME }}
       
-      - name: Complete
-        run: ${{ env.JAVA_HOME }}/bin/java -jar /opt/actions-runner/_work/spring-hello/spring-hello/target/demo-hello-0.0.1-SNAPSHOT.jar 
+      - name: Complete and Start Application
+        run: |
+          java -jar /opt/actions-runner/_work/spring-hello/spring-hello/target/demo-hello-0.0.1-SNAPSHOT.jar &
+          PID=$!  # Obtener el ID del proceso
+          echo "PID del proceso de la aplicación Spring Boot: $PID"
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME }}
