--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -24,8 +24,6 @@ jobs:
       
       - name: Complete and Start Application
         run: |
-          java -jar /opt/actions-runner/_work/spring-hello/spring-hello/target/demo-hello-0.0.1-SNAPSHOT.jar &
+          ${{ env.JAVA_HOME }}/bin/java -jar /opt/actions-runner/_work/spring-hello/spring-hello/target/demo-hello-0.0.1-SNAPSHOT.jar &
           PID=$!  # Obtener el ID del proceso
           echo "PID del proceso de la aplicación Spring Boot: $PID"
-        env:
-          JAVA_HOME: ${{ env.JAVA_HOME }}
