--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -6,7 +6,7 @@ on:
        ["master"]
        
 jobs:
-  deploy:
+  build:
     runs-on: self-hosted
 
     steps:
@@ -16,14 +16,23 @@ jobs:
       - name: Set up Java
         run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
     
-      - name: Build and Deploy
+      - name: Build
         run: |
           /opt/apache-maven-3.9.6/bin/mvn clean install package
         env:
           JAVA_HOME: ${{ env.JAVA_HOME }}
-      
-      - name: Complete and Start Application
-        run: |
-          ${{ env.JAVA_HOME }}/bin/java -jar /opt/actions-runner/_work/spring-hello/spring-hello/target/demo-hello-0.0.1-SNAPSHOT.jar &
-          PID=$!  # Obtener el ID del proceso
-          echo "PID del proceso de la aplicación Spring Boot: $PID"
+  deploy:
+    needs: build
+    runs-on: self-hosted
+    steps:
+    - name: Complete and Start Application
+      #run: |
+      #  ${{ env.JAVA_HOME }}/bin/java -jar /opt/actions-runner/_work/spring-hello/spring-hello/target/demo-hello-0.0.1-SNAPSHOT.jar &
+      #  PID=$!  # Obtener el ID del proceso
+      #  echo "PID del proceso de la aplicación Spring Boot: $PID"
+      run: |
+        cd  /opt/actions-runner/_work/spring-hello/spring-hello/target/ &&
+        /opt/apache-maven-3.9.6/bin/mvn run:spring-boot &
+        PID=$!  # Obtener el ID del proceso
+        echo "PID del proceso de la aplicación Spring Boot: $PID"
+    
