--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -6,44 +6,71 @@ on:
        ["master"]
        
 jobs:
-  build:
-    runs-on: self-hosted
-
-    steps:
+   test:
+      runs-on: self-hosted
+      steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Java
+      - name: Set up Java to tests
         run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
-    
-      - name: Build
-        run: |
-          /opt/apache-maven-3.9.6/bin/mvn clean install package
-        env:
-          JAVA_HOME: ${{ env.JAVA_HOME }}
-        
-  deploy:
-    needs: build
-    runs-on: self-hosted
-    steps:
-      - name: Stop Tomcat
-        run: |
-          sudo systemctl stop tomcat-10.service
-          while sudo systemctl is-active --quiet tomcat-10.service; do
-            echo "Waiting stop tomcat"
-            sleep 5
-          done
-          echo "Tomcat is stopped"
-        
-      - name: Replace WAR file
-        run: |
-          rm -rf /opt/tomcat-10/webapps/demo-hello
-          rm -rf /opt/tomcat-10/webapps/demo-hello.war
-          cp -rf /opt/actions-runner/_work/spring-hello/spring-hello/target/demo-hello-0.0.1-SNAPSHOT.war /opt/tomcat-10/webapps/demo-hello.war
-  
-      - name: Start Tomcat
-        run: systemctl start tomcat-10.service
 
-      - name: Finish
-        run: echo "Application deployed"
+      - name: Run Tests
+        run: |
+          /opt/apache-maven-3.9.6/bin/mvn clean test
+        env:
+          DB_DATABASE: $DB_DATABASE
+          DB_USER: $DB_USER
+          DB_PASSWORD: $DB_PASSWORD
+          JAVA_HOME: ${{ env.JAVA_HOME }}
+          
+   build:
+      needs: test
+      runs-on: self-hosted
+  
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+  
+        - name: Set up Java to build
+          run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
+      
+        - name: Build
+          run: |
+            /opt/apache-maven-3.9.6/bin/mvn clean install package -DskipTests
+          env:
+            DB_DATABASE: $DB_DATABASE
+            DB_USER: $DB_USER
+            DB_PASSWORD: $DB_PASSWORD
+            JAVA_HOME: ${{ env.JAVA_HOME }}
+          
+   deploy:
+      needs: build
+      runs-on: self-hosted
+      steps:
+        - name: Stop Tomcat
+          run: |
+            sudo systemctl stop tomcat-10.service
+            while sudo systemctl is-active --quiet tomcat-10.service; do
+              echo "Waiting stop tomcat"
+              sleep 5
+            done
+            echo "Tomcat is stopped"
+          
+        - name: Replace WAR file
+          run: |
+            rm -rf /opt/tomcat-10/webapps/demo-hello
+            rm -rf /opt/tomcat-10/webapps/demo-hello.war
+            cp -rf /opt/actions-runner/_work/spring-hello/spring-hello/target/demo-hello-0.0.1-SNAPSHOT.war /opt/tomcat-10/webapps/demo-hello.war
     
+        - name: Start Tomcat
+          run: |
+            systemctl start tomcat-10.service
+            while ! curl -s http://localhost:8080 >/dev/null; do
+              echo "Waiting for Tomcat to start..."
+              sleep 5
+            done
+            echo "Tomcat is up and running"
+  
+        - name: Finish
+          run: echo "Application deployed ​successfully"
