--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -22,6 +22,8 @@ jobs:
           DB_DATABASE: $DB_DATABASE
           DB_USER: $DB_USER
           DB_PASSWORD: $DB_PASSWORD
+          EXPIRATION_IN_MINUTES: $EXPIRATION_IN_MINUTES
+          SECRET_KEY: $SECRET_KEY
           JAVA_HOME: ${{ env.JAVA_HOME }}
           
    build:
@@ -38,10 +40,9 @@ jobs:
         - name: Build
           run: |
             /opt/apache-maven-3.9.6/bin/mvn clean install package -DskipTests
-          env:
-            DB_DATABASE: $DB_DATABASE
-            DB_USER: $DB_USER
-            DB_PASSWORD: $DB_PASSWORD
+          env:        
+            EXPIRATION_IN_MINUTES: $EXPIRATION_IN_MINUTES
+            SECRET_KEY: $SECRET_KEY
             JAVA_HOME: ${{ env.JAVA_HOME }}
           
    deploy:
