--- a/src/test/resources/.env.properties
+++ b/src/test/resources/.env.properties
@@ -1,3 +1,5 @@
 DB_DATABASE=demo-hello-test
 DB_USER=h2-user-test
 DB_PASSWORD=h2-user-test
+EXPIRATION_IN_MINUTES=30
+SECRET_KEY=esta_es_mi_clave_secreta 12345678 asdfcxvfgasdf
