--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -22,7 +22,7 @@ jobs:
           DB_DATABASE: $DB_DATABASE
           DB_USER: $DB_USER
           DB_PASSWORD: $DB_PASSWORD
-          EXPIRATION_IN_MINUTES: $EXPIRATION_IN_MINUTES
+          EXPIRATION_IN_MINUTES: ${{ secrets.EXPIRATION_IN_MINUTES }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           JAVA_HOME: ${{ env.JAVA_HOME }}
           
@@ -41,7 +41,7 @@ jobs:
           run: |
             /opt/apache-maven-3.9.6/bin/mvn clean install package -DskipTests
           env:        
-            EXPIRATION_IN_MINUTES: $EXPIRATION_IN_MINUTES
+            EXPIRATION_IN_MINUTES:  ${{ secrets.EXPIRATION_IN_MINUTES }}
             SECRET_KEY: ${{ secrets.SECRET_KEY }}
             JAVA_HOME: ${{ env.JAVA_HOME }}
           
