--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
     config:
-      import: classpath:.env.properties
+      import: optional:.env.properties
     jpa:
          show-sql: true
          hibernate:
