--- a/.github/workflows/test-dev-application-demo.yml
+++ b/.github/workflows/test-dev-application-demo.yml
@@ -6,6 +6,19 @@ on:
       ["dev"]
 
 jobs:
+  sonarqube_scan:
+    runs-on: self-hosted
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: SonarQube Scan
+        run: mvn sonar:sonar \
+             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+             -Dsonar.host.url=${{ secrets.SONAR_URL }} \
+             -Dsonar.login=${{ secrets.SONAR_LOGIN }}
+
+
   test:
     runs-on: self-hosted
     steps:
