--- a/.github/workflows/test-dev-application-demo.yml
+++ b/.github/workflows/test-dev-application-demo.yml
@@ -11,12 +11,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+        
+      - name: Set up Java to tests
+        run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
+        
       - name: SonarQube Scan
         run: mvn sonar:sonar \
              -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
              -Dsonar.host.url=${{ secrets.SONAR_URL }} \
              -Dsonar.login=${{ secrets.SONAR_LOGIN }}
+        env: 
+          JAVA_HOME: ${{ env.JAVA_HOME }}
+          SONAR_JAVA_PATH: ${{ env.JAVA_HOME }}/bin/java
 
 
   test:
