--- a/.github/workflows/test-dev-application-demo.yml
+++ b/.github/workflows/test-dev-application-demo.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
         
       - name: SonarQube Scan
-        run: mvn sonar:sonar \
+        run: /opt/apache-maven-3.9.6/bin/mvn sonar:sonar \
              -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
              -Dsonar.host.url=${{ secrets.SONAR_URL }} \
              -Dsonar.login=${{ secrets.SONAR_LOGIN }}
@@ -26,6 +26,7 @@ jobs:
 
 
   test:
+    needs: sonarqube_scan
     runs-on: self-hosted
     steps:
       - name: Checkout code
