--- a/.github/workflows/test-dev-application-demo.yml
+++ b/.github/workflows/test-dev-application-demo.yml
@@ -18,7 +18,7 @@ jobs:
       - name: SonarQube Scan
         run: /opt/apache-maven-3.8.4/bin/mvn sonar:sonar \
              -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
-             -Dsonar.host.url=${{ secrets.SONAR_URL }} \
+             -Dsonar.host.url=http://68.183.123.51:9088 \
              -Dsonar.login=${{ secrets.SONAR_LOGIN }}
         env: 
           JAVA_HOME: ${{ env.JAVA_HOME }}
