--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <properties>
         <java.version>11</java.version>
         <jjwt.version>0.12.5</jjwt.version>
+        <sonar.host.url>http://localhost:9088</sonar.host.url>
+        <sonar.login>sqp_c38e6b149ec9d3cdac5a6232d43c535cb85318a9</sonar.login>
     </properties>
     <dependencies>
         <dependency>
@@ -124,6 +126,29 @@
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.9.1.2184</version>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.7</version>
+                <executions>
+                    <execution>
+                        <id>jacoco-initialize</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <propertyName>surefireArgLine</propertyName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jacoco-site</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
