--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
     <name>demo-hello</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
         <jjwt.version>0.12.5</jjwt.version>
     </properties>
     <dependencies>
