--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,7 +11,7 @@ spring:
              naming:
                 physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     datasource:
-         url: jdbc:h2:mem:{DB_DATABASE};DB_CLOSE_DELAY=-1
+         url: jdbc:h2:mem:${DB_DATABASE};DB_CLOSE_DELAY=-1
          username: ${DB_USER}
          password: ${DB_PASSWORD}
          driver-class-name: org.h2.Driver
