--- a/.github/workflows/test-dev-application-demo.yml
+++ b/.github/workflows/test-dev-application-demo.yml
@@ -18,8 +18,8 @@ jobs:
       - name: SonarQube Scan
         run: /opt/apache-maven-3.8.4/bin/mvn sonar:sonar \
              -Dsonar.projectKey= ${{ secrets.SONAR_PROJECT_KEY }} \
-             -Dsonar.host.url=${{ secrets.SONAR_URL }} \
              -Dsonar.login=${{ secrets.SONAR_LOGIN }}
+             #-Dsonar.host.url=${{ secrets.SONAR_URL }} \     
         env: 
           JAVA_HOME: ${{ env.JAVA_HOME }}
           SONAR_JAVA_PATH: ${{ env.JAVA_HOME }}/bin/java
