--- a/.github/workflows/test-dev-application-demo.yml
+++ b/.github/workflows/test-dev-application-demo.yml
@@ -9,22 +9,20 @@ jobs:
   sonarqube_scan:
     runs-on: self-hosted
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        
       - name: Set up Java to tests
         run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
-    
+        
       - name: SonarQube Scan
-        run: /opt/apache-maven-3.8.4/bin/mvn sonar:sonar \
-             -Dsonar.projectKey= ${{ secrets.SONAR_PROJECT_KEY }} \
-             -Dsonar.login=${{ secrets.SONAR_LOGIN }}
-             #-Dsonar.host.url=${{ secrets.SONAR_URL }} \     
-        env: 
+        uses: sonarsource/sonarqube-scan-action@master
+        with:
+            # Disabling shallow clone is recommended for improving relevancy of reporting
+            fetch-depth: 0
+        env:
+          SONAR_TOKEN: ${{  secrets.SONAR_PROJECT_KEY }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_URL }} example URL (https://sq.bswlog.co.in/)
           JAVA_HOME: ${{ env.JAVA_HOME }}
           SONAR_JAVA_PATH: ${{ env.JAVA_HOME }}/bin/java
-
-
+          
   test:
     needs: sonarqube_scan
     runs-on: self-hosted
