--- a/.github/workflows/test-dev-application-demo.yml
+++ b/.github/workflows/test-dev-application-demo.yml
@@ -9,19 +9,20 @@ jobs:
   sonarqube_scan:
     runs-on: self-hosted
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
       - name: Set up Java to tests
         run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
-        
+          
       - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        with:
-            # Disabling shallow clone is recommended for improving relevancy of reporting
-            fetch-depth: 0
+        run: /opt/apache-maven-3.9.6/bin/mvn verify sonar:sonar
         env:
-          SONAR_TOKEN: ${{  secrets.SONAR_PROJECT_KEY }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_URL }} example URL (https://sq.bswlog.co.in/)
           JAVA_HOME: ${{ env.JAVA_HOME }}
           SONAR_JAVA_PATH: ${{ env.JAVA_HOME }}/bin/java
+          SONAR_HOST_URL: ${{ secrets.SONAR_URL }}
+          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+          SONAR_LOGIN: ${{ secrets.SONAR_LOGIN }}
           
   test:
     needs: sonarqube_scan
