--- a/.github/workflows/test-dev-application-demo.yml
+++ b/.github/workflows/test-dev-application-demo.yml
@@ -25,7 +25,7 @@ jobs:
         run: /opt/apache-maven-3.9.6/bin/mvn verify sonar:sonar \
              -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
              -Dsonar.login=${{ secrets.SONAR_LOGIN }} \
-             --Dsonar.host.url= ${{ secrets.SONAR_URL }}
+             -Dsonar.host.url= ${{ secrets.SONAR_URL }}
         env:
           JAVA_HOME: ${{ env.JAVA_HOME }}
           SONAR_JAVA_PATH: ${{ env.JAVA_HOME }}/bin/java
