--- a/.github/workflows/test-dev-application-demo.yml
+++ b/.github/workflows/test-dev-application-demo.yml
@@ -16,10 +16,7 @@ jobs:
         run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
           
       - name: SonarQube Scan
-        run: /opt/apache-maven-3.9.6/bin/mvn verify sonar:sonar \
-             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
-             -Dsonar.login=${{ secrets.SONAR_LOGIN }} \
-             -Dsonar.host.url=${{ secrets.SONAR_URL }}
+        run: /opt/apache-maven-3.9.6/bin/mvn verify sonar:sonar -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} -Dsonar.host.url=${{ secrets.SONAR_URL }} -Dsonar.login=${{ secrets.SONAR_LOGIN }}
         env:
           JAVA_HOME: ${{ env.JAVA_HOME }}
           SONAR_JAVA_PATH: ${{ env.JAVA_HOME }}/bin/java
