--- a/.github/workflows/deploy-application-demo.yml
+++ b/.github/workflows/deploy-application-demo.yml
@@ -5,7 +5,23 @@ on:
     types: [ closed ]
        
 jobs:
+   sonarqube_scan:
+      runs-on: self-hosted
+      steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+          
+      - name: Set up Java to tests
+        run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
+            
+      - name: SonarQube Scan In Production
+        run: /opt/apache-maven-3.9.6/bin/mvn verify sonar:sonar -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} -Dsonar.host.url=${{ secrets.SONAR_URL }} -Dsonar.login=${{ secrets.SONAR_LOGIN }}
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME }}
+          SONAR_JAVA_PATH: ${{ env.JAVA_HOME }}/bin/java
+          
    test:
+      needs: sonarqube_scan
       runs-on: self-hosted
       if: github.event.pull_request.merged && github.event.pull_request.base.ref == 'master'
       steps:
@@ -15,7 +31,7 @@ jobs:
       - name: Set up Java to tests
         run: echo "JAVA_HOME=/usr/lib/jvm/open-jdk-17" >> $GITHUB_ENV
 
-      - name: Run Tests
+      - name: Run Tests In Production
         run: |
           /opt/apache-maven-3.9.6/bin/mvn clean test
         env:
